# bevy_status_effects

./: Cargo.toml  README.md
bevy_status_effects/: Cargo.toml
bevy_status_effects/src/: bevy_butler.rs  hook.rs  lib.rs  timer.rs
bevy_status_effects/tests/: bevy_butler.rs  merge_mode.rs  timer.rs
bevy_status_effects_macros/: Cargo.toml
bevy_status_effects_macros/src/: bevy_butler.rs  lib.rs
examples/: poison.rs
examples/immediate_stats/: decaying_speed.rs  decaying_speed_auto_plugin.rs
src/: command.rs  lib.rs  relation.rs  timer.rs
tests/: merge_mode.rs  timer.rs
