[package]
name = "bevy_status_effects"
version = "0.1.0"
edition = "2024"
description = "A crate for adding status effects to entities using relations."
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy", "relationship"]
repository = "https://github.com/AlephCubed/bevy_status_effects"
license = "MIT OR Apache-2.0"
authors = ["AlephCubed"]

[dependencies]
bevy_app = { version = "0.16.0-rc.1", default-features = false }
bevy_asset = { version = "0.16.0-rc.1", default-features = false }
bevy_ecs = { version = "0.16.0-rc.1", default-features = false }
bevy_image = { version = "0.16.0-rc.1", default-features = false, features = [
  "bevy_reflect",
] }
bevy_time = { version = "0.16.0-rc.1", default-features = false }
