[package]
name = "bevy_status_effects"
version = "0.1.0"
edition = "2024"
description = "A crate for adding status effects to entities using relations."
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy", "relationship"]
repository = "https://github.com/AlephCubed/bevy_status_effects"
license = "MIT OR Apache-2.0"
authors = ["AlephCubed"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
bevy_app = { version = "0.16.0", default-features = false, features = [
  "bevy_reflect",
] }
bevy_ecs = { version = "0.16.0", default-features = false, features = [
  "bevy_reflect",
] }
bevy_reflect = { version = "0.16.0", default-features = false }
bevy_time = { version = "0.16.0", default-features = false, features = [
  "bevy_reflect",
] }

[dev-dependencies]
bevy = "0.16.1"
immediate_stats = { git = "https://github.com/AlephCubed/immediate_stats", branch = "apply-scaled", features = ["bevy_auto_plugin"] }
bevy_auto_plugin = "0.5.0"

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[[example]]
name = "poison"
path = "examples/poison.rs"

[[example]]
name = "decaying_speed"
path = "examples/immediate_stats/decaying_speed.rs"

[[example]]
name = "decaying_speed_auto_plugin"
path = "examples/immediate_stats/decaying_speed_auto_plugin.rs"