[package]
name = "bevy_status_effects_macros"
version = "0.1.0"
edition = "2024"
description = "A crate for adding status effects to entities using relations."
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy", "relationship"]
repository = "https://github.com/AlephCubed/bevy_status_effects"
license = "MIT OR Apache-2.0"
authors = ["AlephCubed"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[features]
bevy_butler = []

[dependencies]
darling = "0.20.11"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
